--- a/Sass/_header.scss
+++ b/Sass/_header.scss
@@ -25,7 +25,7 @@
     1.2 header__menu
 ---------------------------------*/
 .header__menu {
-    display: flex;
+    display: flex !important;
     position: fixed;
     top: 0;
     z-index: 3;
@@ -156,8 +156,10 @@
     ---------------------------------*/
     .drawer-hamburger {
         display: block;
+        top: -0.65vw;
         z-index: 100;
-        padding: 1.88vw 3.45vw 0 0;
+        padding: 0 3.45vw 0 0;
+        height: 7.13vw;
     }
 
     .drawer-hamburger-icon {
@@ -285,7 +287,8 @@
         1.1.1 drawer-hamburger
     ---------------------------------*/
     .drawer-hamburger {
-        padding: 0.88vw 3.45vw 0 0;
+        padding: 0 3.45vw 0 0;
+        top: -1.2vw;
     }
     .drawer-hamburger-icon {
         width: 4.03vw;
@@ -337,7 +340,8 @@
     1.1.1 drawer-hamburger
     ---------------------------------*/
     .drawer-hamburger {
-        padding: 5.81vw 6.74vw 0 0;
+        padding: 0 6.74vw 0 0;
+        height: 16.61vw;
     }
 
     .drawer-hamburger-icon {
