--- a/Sass/_section3.scss
+++ b/Sass/_section3.scss
@@ -28,9 +28,12 @@
     position: absolute;
     top: 26.66vw;
     left: -13.68vw;
-    transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-weight: normal;
     font-size: 3.64vw;
@@ -49,6 +52,7 @@
 }
 
 .section3__title {
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-weight: normal;
     font-size: 3.12vw;
@@ -94,6 +98,7 @@
 }
 
 .section3__content__text--ja {
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-size: 0.93vw;
     line-height: 1.56vw;
@@ -104,6 +109,7 @@
 
 .section3__content__text--en {
     margin-top: 3.46vw;
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-size: 0.78vw;
     letter-spacing: 0.1em;
@@ -117,14 +123,19 @@
     margin-top: 5.39vw;
     padding: 1.02vw 1.61vw 0.75vw;
     border: 1px solid #333;
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.9);
     font-size: 0.78vw;
     letter-spacing: 0.1em;
     text-align: center;
     text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.16);
     &:hover {
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000); 
         background: rgba(0, 0, 0, 0.9);
         color: #fff;
+        &:not(:target) {
+            filter: none;
+        }
     }
 }
 
