--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,13 @@ li {
   z-index: 3;
   width: 100%;
   height: 7.13vw;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#B3000000,endColorstr=#B3000000);
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: space-between;
+}
+
+.header__menu:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -217,8 +222,12 @@ li {
     z-index: 4;
     width: 100%;
     height: 56.2vw;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#B3000000,endColorstr=#B3000000);
     background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
+  }
+  .drawer-nav:not(:target) {
+    filter: none;
   }
   .drawer--right.drawer-open .drawer-hamburger {
     right: 0;
@@ -491,6 +500,7 @@ li {
 }
 
 .section1__content__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 2.6vw;
@@ -501,6 +511,7 @@ li {
 
 .section1__content__text--ja {
   margin-top: 3.54vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 1.82vw;
@@ -516,6 +527,7 @@ li {
 
 .section1__content__text--en {
   margin-top: 3.48vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 1.82vw;
@@ -534,6 +546,7 @@ li {
   margin: 6.56vw 0 0 10.67vw;
   padding: 2.3rem 3.7rem;
   border: 1px solid #000;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 1.04vw;
   letter-spacing: 0.1em;
@@ -543,8 +556,13 @@ li {
 }
 
 .section1__content__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.section1__content__btn:hover:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -837,9 +855,12 @@ li {
   position: absolute;
   top: 16.66vw;
   left: -3.48vw;
-  transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 7.29vw;
@@ -857,6 +878,7 @@ li {
 }
 
 .section2__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 3.12vw;
@@ -901,6 +923,7 @@ li {
 }
 
 .section2__content__text--ja {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.93vw;
   line-height: 1.56vw;
@@ -911,6 +934,7 @@ li {
 
 .section2__content__text--en {
   margin-top: 3.46vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -922,6 +946,7 @@ li {
   display: inline-block;
   margin-top: 5.39vw;
   padding: 1.02vw 1.61vw 0.75vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -932,8 +957,13 @@ li {
 }
 
 .section2__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.section2__btn:hover:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -1241,9 +1271,12 @@ li {
   position: absolute;
   top: 26.66vw;
   left: -13.68vw;
-  transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 3.64vw;
@@ -1262,6 +1295,7 @@ li {
 }
 
 .section3__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 3.12vw;
@@ -1307,6 +1341,7 @@ li {
 }
 
 .section3__content__text--ja {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.93vw;
   line-height: 1.56vw;
@@ -1317,6 +1352,7 @@ li {
 
 .section3__content__text--en {
   margin-top: 3.46vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -1330,6 +1366,7 @@ li {
   margin-top: 5.39vw;
   padding: 1.02vw 1.61vw 0.75vw;
   border: 1px solid #333;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -1338,8 +1375,13 @@ li {
 }
 
 .section3__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.section3__btn:hover:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -1664,9 +1706,12 @@ li {
   position: absolute;
   top: 22.16vw;
   left: -5.48vw;
-  transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 5.2vw;
@@ -1684,6 +1729,7 @@ li {
 }
 
 .section4__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 3.12vw;
@@ -1739,6 +1785,7 @@ li {
 
 .section4__content__text--en {
   margin-top: 3.46vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -1752,6 +1799,7 @@ li {
   margin-top: 5.39vw;
   padding: 1.02vw 1.61vw 0.75vw;
   border: 1px solid #333;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -1760,8 +1808,13 @@ li {
 }
 
 .section4__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.section4__btn:hover:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -2075,6 +2128,7 @@ li {
 }
 
 .section5__text {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 1.56vw;
@@ -2188,6 +2242,7 @@ li {
 }
 
 .contact__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 2.08vw;
@@ -2199,6 +2254,7 @@ li {
 
 .contact__text--ja {
   margin: 2.03vw 0 0 5.52vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.9vw;
   line-height: 1.56vw;
@@ -2209,6 +2265,7 @@ li {
 
 .contact__text--en {
   margin: 2.32vw 0 0 5.52vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -2221,6 +2278,7 @@ li {
   margin-top: 3.03vw;
   padding: 1.61vw 3.54vw 1.37vw;
   border: 1px solid #000;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 1.04vw;
   line-height: 1.4vw;
@@ -2230,8 +2288,13 @@ li {
 }
 
 .contact__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.contact__btn:hover:not(:target) {
+  filter: none;
 }
 
 .contact__bg {
@@ -2256,6 +2319,7 @@ li {
 }
 
 .booking__title {
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-weight: normal;
   font-size: 2.08vw;
@@ -2267,6 +2331,7 @@ li {
 
 .booking__text--ja {
   margin: 2.03vw 0 0 5.52vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.9vw;
   line-height: 1.56vw;
@@ -2277,6 +2342,7 @@ li {
 
 .booking__text--en {
   margin: 2.32vw 0 0 5.52vw;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.78vw;
   letter-spacing: 0.1em;
@@ -2289,6 +2355,7 @@ li {
   margin-top: 3.03vw;
   padding: 1.61vw 3.54vw 1.37vw;
   border: 1px solid #000;
+  -ms-color: #000;
   color: rgba(0, 0, 0, 0.9);
   font-size: 1.04vw;
   line-height: 1.4vw;
@@ -2298,8 +2365,13 @@ li {
 }
 
 .booking__btn:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.booking__btn:hover:not(:target) {
+  filter: none;
 }
 
 .booking__bg {
@@ -2527,6 +2599,7 @@ li {
     display: inline-block;
   }
   .contact__title {
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-weight: normal;
     font-size: 6.66vw;
@@ -2537,6 +2610,7 @@ li {
   }
   .contact__lead {
     margin-top: 4.53vw;
+    -ms-color: #000;
     color: rgba(0, 0, 0, 0.8);
     font-size: 4vw;
     letter-spacing: 0.1em;
@@ -2568,8 +2642,12 @@ li {
     transition: .4s;
   }
   .contact__btn:hover {
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
     background: rgba(0, 0, 0, 0.9);
     color: #fff;
+  }
+  .contact__btn:hover:not(:target) {
+    filter: none;
   }
   .booking__btn {
     display: block;
@@ -2609,8 +2687,13 @@ li {
 .footer__inner {
   display: grid;
   height: 17.31vw;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background-color: rgba(0, 0, 0, 0.95);
   grid-template-columns: 24.73vw 26.09vw 1fr;
+}
+
+.footer__inner:not(:target) {
+  filter: none;
 }
 
 /*  
@@ -2735,7 +2818,12 @@ li {
 ---------------------------------*/
 .footer__bottom {
   height: 3.59vw;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6000000,endColorstr=#E6000000);
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.footer__bottom:not(:target) {
+  filter: none;
 }
 
 .copyright {
